--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,11 +25,11 @@ section {
     content: "";
     position: absolute;
     width: 0;
-    height: 2px;
+    height: 1.5px;
     display: block;
     margin: auto;
-    background: #000;
-    transition: width 0.3s ease, left 0.3s ease;
+    background: #adb5bd;
+    transition: width 0.2s ease, left 0.2s ease;
     bottom: 0;
     left: 50%;
 }
