--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,10 +25,10 @@ section {
     content: "";
     position: absolute;
     width: 0;
-    height: 1.5px;
+    height: 1px;
     display: block;
     margin: auto;
-    background: #adb5bd;
+    background: #000;
     transition: width 0.2s ease, left 0.2s ease;
     bottom: 0;
     left: 50%;
